# recoGATE

./: .gitignore  README.md  deploy.sh  start.reco
GateMacros/: prepareGATE.py
GateMacros/BigSim/: geometry-plates-similar-clearpem.mac  runBig.mac  runNormalization.mac  runUniform.mac  sourcePlanar.mac  sourceUniform.mac  sourcesAndBg.mac
GateMacros/Cylindrical/: SNR_source.mac  background.mac  geometry.mac  run.mac  sourceCylinder.mac  sources.mac  visu.mac
GateMacros/CylindricalSmall/: SNR_source.mac  background.mac  geometry.mac  run.mac  sourceCylinder.mac  sourceCylinderLarge.mac  sources.mac
GateMacros/Ring/: attachToSystem.mac  background.mac  geometry.mac  physics.mac  run.mac
GateMacros/RingPlanarNormalization/: Planar.root  Planar_2cry.elm2  Planar_3cry-avg.elm2  Planar_3cry-effCompton.elm2  Planar_3cry-magicalCompton.elm2  Planar_points.root  angles.cache  geometry.mac  norm.lm  planar.mac  run.mac  scatter.txt  sources.mac
reco/: README.txt  deploy.sh
reco/Documents/: Image_corrections.docx
reco/corrections/: CMakeLists.txt  CorrectAttenuation_SV.cxx  CorrectScatter_multiCore_LMSW.cxx  MeshCreator.cxx  RawImport.h
reco/lmrec-trunk/: .~lock.user_guide.odt#  Makefile  UnitImage  angles.txt  bigrandom.diff  test.elm2  user_guide.odt  zMakeNorm.sh  zReconstruct.sh
reco/pem-sonic-tools/: #elm3to2.cpp#  .directory  angles.txt  cross_sectionH2O_2.txt  elm2.hpp  libexamdb.py  libliji.py  libpem.py  libstir.py  mkdb.sh  pem.norm  pem.recon  pemdb.odt  (+3 more)
translate/: dataset.cpp  deploy.sh  simToData.cpp  start.translate  struct.hh  structDictionary.C
(+23 files in other folders)
